# rename-emotions

./: .env.example  .gitignore  LICENSE  README.md  config.toml  pyproject.toml  rename_emotions.py
prompts/: emotion.en.txt  emotion.zh.txt  image.en.txt  image.zh.txt
