[project]
name = "ai-image-renamer"
version = "1.1.0"
description = "A script to rename image files based on their content using a configurable AI vision model."
authors = [{ name = "Cline", email = "cline@example.com" }]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "Pillow>=9.5.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[tool.uv]
# This section can be used for uv-specific configurations if needed.
